--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,33 @@
 {
-  "name": "books_app",
+  "name": "my-ps-games",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.2.0",
+    "@types/styled-components": "^4.4.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0",
+    "redux": "^4.0.4",
+    "redux-axios-middleware": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1",
+    "ts-transformer-keys": "^0.4.1",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
