--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,15 +38,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "babel-jest": "^25.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^25.1.0",
-    "react-test-renderer": "^16.12.0"
+    "enzyme-to-json": "^3.4.3",
+    "jest": "^25.1.0"
   }
 }
